--- a/client-frontend/src/components/resume_art/ResumeArt.css
+++ b/client-frontend/src/components/resume_art/ResumeArt.css
@@ -32,10 +32,8 @@
 }
 
 .resume-art-image {
-  max-width: 100%;
-  max-height: 80vh;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
   display: block;
 }
